--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "author": {
-    "name": "Stefan Wüthrich",
-    "url": "https://altafino.com"
+    "name": "Omkar Kulkarni"
   },
   "keywords": [
     "react",
@@ -11,10 +10,11 @@
     "tailwind"
   ],
   "license": "MIT",
-  "name": "react-webpack-5-tailwind-2",
+  "name": "ecommerce",
   "version": "1.0.1",
-  "description": "Webpack 5 boilerplate with React 17, Tailwind 2, using babel, sass, with HMR and an optimized production build",
+  "description": "Ecommerce website created with react and tailwind",
   "dependencies": {
+    "@tailwindcss/jit": "^0.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.0.4"
