--- a/package.json
+++ b/package.json
@@ -81,5 +81,8 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "browser": {
+    "[module-name]": false
   }
 }
