--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/jit": "^0.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0-beta.0",
     "tailwindcss": "^2.0.4"
   },
   "main": "index.js",
