--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "description": "Ecommerce website created with react and tailwind",
   "dependencies": {
     "@tailwindcss/jit": "^0.1.13",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
+    "swiper": "^6.5.0",
     "tailwindcss": "^2.0.4"
   },
   "main": "index.js",
