--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^6.0.0-beta.0",
     "swiper": "^6.5.0",
     "tailwindcss": "^2.0.4"
