--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^6.0.0-beta.0",
     "swiper": "^6.5.0",
     "tailwindcss": "^2.0.4"
   },
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
+    "start": "SET NODE_ENV=development&& webpack serve --config config/webpack.dev.js",
     "build": "NODE_ENV=production webpack --config config/webpack.prod.js",
     "build-staging": "NODE_ENV=production webpack --config config/webpack.stag.js",
     "prettify": "yarn prettier \"**/*.*(js|jsx)\" --ignore-path=.prettierignore --write",
