--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "Ecommerce website created with react and tailwind",
   "dependencies": {
     "@tailwindcss/jit": "^0.1.13",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
