--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": [
-   [ "@babel/preset-env", {
+   [ "@babel/preset-env",{
      "modules": false,
      "targets": {
     "browsers": [
@@ -13,10 +13,10 @@
       "ie 11"
     ]
      }
-   } ],
+   }],
     ["@babel/preset-react", {
       "runtime": "automatic"
     }]
     ],
-    "plugins": [ "@babel/plugin-proposal-class-properties" ]
+    "plugins": [ "@babel/plugin-proposal-class-properties", "@babel/plugin-transform-runtime" ]
   }
