--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "version": "1.0.1",
   "description": "Ecommerce website created with react and tailwind",
   "dependencies": {
+    "@headlessui/react": "^0.3.1",
     "@tailwindcss/jit": "^0.1.13",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
