--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@tailwindcss/jit": "^0.1.13",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "swiper": "^6.5.0",
