--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/jit": "^0.1.13",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "faker": "^5.5.2",
+    "miragejs": "^0.1.41",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
