webpack:jsconfig:added more path aliases, refactored product layout, improved sidebar

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,12 @@
 {
     "compilerOptions": {
-        "baseUrl": "src",
+        "baseUrl": "./",
+        "target": "es2015",
+        "allowSyntheticDefaultImports": false,
         "paths": {
-           "components/*" : ["./components/*"]
+           "components/*" : ["src/components/*"],
+           "context/*" :["src/context/*"],
+           "pages/*" : ["src/pages/*"] 
         }
-    }
+    },
 }
