--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": "./",
         "target": "es2015",
+        "module": "commonjs",
         "allowSyntheticDefaultImports": false,
         "paths": {
            "components/*" : ["src/components/*"],
