--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "description": "Ecommerce website created with react and tailwind",
   "dependencies": {
     "@headlessui/react": "^0.3.1",
-    "@tailwindcss/jit": "^0.1.13",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "faker": "^5.5.2",
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "swiper": "^6.5.0",
     "tailwindcss": "^2.0.4"
@@ -58,6 +59,7 @@
     "@babel/preset-react": "^7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@svgr/webpack": "^5.5.0",
+    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
