--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.0.9",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.18",
