add: react-query

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
         "paths": {
            "components/*" : ["./src/components/*"],
            "context/*" :["./src/context/*"],
-           "pages/*" : ["./src/pages/*"] 
+           "pages/*" : ["./src/pages/*"],
+           "services/*": ["./src/services/*"]
         }
     },
 }
