--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^1.0.9",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-query": "^3.17.2",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.0.4"
