--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "Ecommerce website created with react and tailwind",
   "dependencies": {
     "@headlessui/react": "^0.3.1",
+    "@hookform/resolvers": "^2.5.2",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
@@ -24,12 +25,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
+    "react-hook-form": "^7.8.8",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.17.2",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
-    "tailwindcss": "^2.0.4"
+    "tailwindcss": "^2.0.4",
+    "yup": "^0.32.9"
   },
   "main": "index.js",
   "scripts": {
